fixed text alignment of home section categories

--- a/css/categories.css
+++ b/css/categories.css
@@ -17,6 +17,7 @@
 }
 
 .categ-item {
+    max-width: fit-content;
     text-align: center;
 }
 
